--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -108,6 +108,10 @@ input, textarea
 		font-size: 14px
 		line-height: 1
 
+input
+	line-height: 40px
+
+	
 input[type="number"]::-webkit-outer-spin-button,
 input[type="number"]::-webkit-inner-spin-button 
   -webkit-appearance: none
