--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1031,7 +1031,7 @@
 
 
 		&_item
-			min-width: 220px
+			min-width: 210px
 			width: 24%
 			color: #fff
 
@@ -1088,7 +1088,7 @@
 			flex-direction: column
 			text-align: center
 			text-transform: uppercase
-			min-width: 150px
+			min-width: 145px
 
 		h2
 			margin-bottom: 95px
@@ -1414,9 +1414,9 @@
 		line-height: 50px
 		font-size: 14px
 		color: #fff
-		max-width: 145px
+		max-width: 180px
+		padding: 0 20px
 		width: 100%
-		padding: 0
 		margin-bottom: 0
 		background-color: #ffc14d
 		border-color: #ffc14d
@@ -1461,6 +1461,18 @@
 	&__btn
 		display: flex
 		justify-content: flex-end
+		flex-direction: column
+		align-items: flex-end
+
+		div
+			display: flex
+			justify-content: flex-end
+			align-items: center
+			margin-bottom: 5px
+
+		a
+			white-space: nowrap
+
 
 		input
 			display: none
@@ -1534,6 +1546,8 @@
 			background-color: #ffffff
 			margin-right: 25px
 			padding: 10px 25px
+			color: #fcb13c
+			line-height: 1.1
 
 			&::placeholder
 				color: #e5e5e5
