--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1939,7 +1939,24 @@
 		right: 0
 
 
+.deposit__content_item--block
+	// div
+	// 	position: relative
 
+	// 	input
+	// 		position: absolute
+	// 		right: 0
+	// 		top: 0
+	// 		background: #fff
+
+	// #partner--percent,
+	// #partner--percent--two,
+	// #partner--percent--three
+	// 	display: none
+
+
+	// .focus
+	// 	display: block !important
 
 @import "page"
 @import "media" // Always at the end
